--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,16 @@ body{
     font-family: sans-serif;
     font-size: 20px;
 }
+.main{
+    width:80%;
+    margin: 0 auto;
+    text-align: center;
+}
+button{
+    padding: 8px 12px;
+    border: none;
+    margin: 6px;
+    background-color: rgb(58, 172, 224);
+    border-radius: 5px;
+    cursor: pointer;
+}
