--- a/src/App.css
+++ b/src/App.css
@@ -20,4 +20,19 @@ button{
     background-color: rgb(58, 172, 224);
     border-radius: 5px;
     cursor: pointer;
+    transition: all 300ms ease-in;
+}
+button:hover,
+button:focus,
+button:active{
+    opacity: 0.8;
+    border-bottom: 2px solid rgb(60, 180, 230);
+}
+.pause-button{
+    margin: 0 auto;
+    background-color: chocolate;
+    color: aliceblue;
+    width:fit-content;
+    padding: 0.8em 1em;
+    border-radius: 6px;
 }
